# Forge

./: .eslintrc.cjs  .gitignore  README.md  SPEC-M10.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/: copilot-instructions.md  dependabot.yml
agentinstructions/: NEXT.md  plan.md  prompt.md
e2e/: playwright.config.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/bindings/: ChatDelta.ts  ChatRequest.ts  ProviderCaps.ts
src-tauri/icons/: icon.icns
src-tauri/migrations/: V0001__init.sql  V0002__circuit.sql  V0003__pcb.sql  V0004__cad.sql
src-tauri/src/: app_state.rs  db.rs  errors.rs  lib.rs  main.rs  secrets.rs  telemetry.rs
src-tauri/src/ai/: actions.rs  mod.rs  prompt.rs  registry.rs
src-tauri/src/ai/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
src-tauri/src/boards/: mod.rs
src-tauri/src/bom_ops/: mod.rs
src-tauri/src/cad_ops/: mod.rs
src-tauri/src/circuit_ops/: mod.rs
src-tauri/src/commands/: ai.rs  boards.rs  bom.rs  cad.rs  circuit.rs  compile_cmd.rs  diagnostics.rs  export_cmd.rs  filesystem.rs  mod.rs  pcb.rs  project.rs  search.rs  serial.rs  settings.rs
src-tauri/src/compile/: mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/filesystem/: mod.rs  watcher.rs
src-tauri/src/pcb_ops/: mod.rs
src-tauri/src/project_store/: mod.rs
src-tauri/src/schema/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/serial/: mod.rs
src-tauri/src/settings/: mod.rs
(+141 files in other folders)
