[package]
name = "forge"
version = "0.3.0"
description = "Forge — AI-native hardware engineering IDE"
edition = "2021"
rust-version = "1.77"
license = "UNLICENSED"
default-run = "forge"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
parking_lot = "0.12"
directories = "5"
keyring = "2"
ts-rs = "10"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "6"
ignore = "0.4"
regex = "1"
serialport = "4"
reqwest = { version = "0.13", features = ["stream", "json"] }
eventsource-stream = "0.2"
futures-util = "0.3"
async-trait = "0.1.89"
async-stream = "0.3.6"
bytes = "1.11.1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[features]
# Enable the dev keyring backend used by integration tests on CI runners
# where the real OS keyring is unavailable.
test-keyring = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
